examples/examples/buttons/snapshots/buttons__tests____test_buttons-3.snap
---
source: examples/examples/buttons/tests.rs
expression: harness.buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 25, height: 10 },
    content: [
        "                         ",
        " ╔═══════════╗   12 x 6  ",
        " ║  bigger   ║           ",
        " ╚═══════════╝           ",
        " ╭───────────╮           ",
        " │  smaller  │           ",
        " ╰───────────╯           ",
        "                         ",
        "                         ",
        "                         ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 1, fg: Reset, bg: Rgb(63, 99, 54), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Reset, bg: Rgb(63, 99, 54), underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Reset, bg: Rgb(63, 99, 54), underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Reset, bg: Rgb(63, 99, 54), underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 5, fg: Reset, bg: Rgb(63, 99, 54), underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Reset, bg: Rgb(63, 99, 54), underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
